--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
+asn1crypto==0.24.0
 astroid==1.6.4
+bcrypt==3.1.4
+blinker==1.4
+cffi==1.11.5
 click==6.7
+cryptography==2.2.2
 Flask==1.0.2
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.3.2
+Flask-User==1.0.1.5
 Flask-WTF==0.14.2
 gunicorn==19.8.1
+idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+passlib==1.7.1
 psycopg2==2.7.4
+pycparser==2.18
 pylint==1.9.1
 six==1.11.0
 SQLAlchemy==1.2.7
